@@ -4,6 +4,12 @@ Python News
 
 (editors: check NEWS.help for information about editing NEWS using ReST.)
 
+What's New in Python 2.5.6c1?
+=============================
+
+*Release date: XX-XXX-2010*
+
+
 What's New in Python 2.5.5?
 ===========================
 
